add testcontainer work only with current ver 8.2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.8'
 
 services:
   mysql:
-    image: mysql
+    container_name: users_mysql_db
+    image: mysql:8.2
     restart: always
     environment:
       MYSQL_DATABASE: file_storage
