--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+#spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/file_storage
 spring.datasource.username=mysql
 spring.datasource.password=1234
 spring.jpa.show-sql=true
-#spring.sql.init.mode=always - /resources/schema.sql
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
