--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#spring.sql.init.mode=always
+spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/file_storage
+spring.datasource.url=jdbc:mysql://localhost:3306/file_storage?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true&loggerLevel=off
 spring.datasource.username=mysql
 spring.datasource.password=1234
 spring.jpa.show-sql=true
