--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/file_storage?useSSL=false&allo
 spring.datasource.username=mysql
 spring.datasource.password=1234
 spring.jpa.show-sql=true
+#server.error.whitelabel.enabled=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
