realized register user in minio

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>mysql</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio-admin</artifactId>
+            <version>8.5.7</version>
+        </dependency>
     </dependencies>
 
     <build>
