--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,39 @@
 version: '3.8'
 
+#networks:
+#  app-tier:
+#    driver: bridge
+
 services:
+  minio:
+    image: 'bitnami/minio:latest'
+    ports:
+      - '9000:9000'
+      - '9001:9001'
+    environment:
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: 12341234
+      MINIO_DEFAULT_BUCKETS: default-bucket:private, second-default-bucket
+    volumes:
+      - minio_data:/bitnami/minio/data
+
+      #      - MINIO_DEFAULT_BUCKETS=my-first-bucket:policy,my-second-bucket
+      #    volumes:
+      #      - --volume /path/to/minio-persistence:/bitnami/minio/data \
+      #      - MINIO_CONSOLE_PORT_NUMBER=9001
+  #    networks:
+  #      - app-tier
+
+  #    myapp:
+  #      image: 'YOUR_APPLICATION_IMAGE'
+  #      networks:
+  #        - app-tier
+  #      environment:
+  #        - MINIO_SERVER_ACCESS_KEY=minio-access-key
+  #        - MINIO_SERVER_SECRET_KEY=minio-secret-key
+
   mysql:
-    container_name: users_mysql_db
-    image: mysql:8.2
+    image: 'mysql:8.2'
     restart: always
     environment:
       MYSQL_DATABASE: file_storage
@@ -13,8 +43,8 @@ services:
     ports:
       - '3306:3306'
     volumes:
-#      - ./src/main/resources/db-init/init.sql:/docker-entrypoint-initdb.d/init.sql
       - db:/var/lib/mysql
 
 volumes:
   db:
+  minio_data:
