--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,30 @@
 version: '3.8'
 
-#networks:
-#  app-tier:
-#    driver: bridge
-
 services:
   minio:
-    image: 'bitnami/minio:latest'
+    image: minio/minio
     ports:
-      - '9000:9000'
-      - '9001:9001'
+      - "9000:9000"
+      - "9001:9001"
     environment:
       MINIO_ROOT_USER: minio
       MINIO_ROOT_PASSWORD: 12341234
-      MINIO_DEFAULT_BUCKETS: default-bucket:private, second-default-bucket
     volumes:
-      - minio_data:/bitnami/minio/data
+      - minio_data:/data
+    command: server --console-address ":9001" /data
 
-      #      - MINIO_DEFAULT_BUCKETS=my-first-bucket:policy,my-second-bucket
-      #    volumes:
-      #      - --volume /path/to/minio-persistence:/bitnami/minio/data \
-      #      - MINIO_CONSOLE_PORT_NUMBER=9001
-  #    networks:
-  #      - app-tier
-
-  #    myapp:
-  #      image: 'YOUR_APPLICATION_IMAGE'
-  #      networks:
-  #        - app-tier
-  #      environment:
-  #        - MINIO_SERVER_ACCESS_KEY=minio-access-key
-  #        - MINIO_SERVER_SECRET_KEY=minio-secret-key
-
+  createbuckets:
+    image: minio/mc
+    depends_on:
+      - minio
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc config host add myminio http://minio:9000 minio 12341234;
+      /usr/bin/mc rm -r --force myminio/user-files;
+      /usr/bin/mc mb myminio/user-files;
+      /usr/bin/mc policy download myminio/user-files;
+      exit 0;
+      "
   mysql:
     image: 'mysql:8.2'
     restart: always
