--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.servlet.multipart.max-file-size=5MB
+
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/file_storage?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true&loggerLevel=off
