--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,31 +13,45 @@ services:
       - minio_data:/data
     command: server --console-address ":9001" /data
 
-#  createbuckets:
-#    image: minio/mc
-#    depends_on:
-#      - minio
-#    entrypoint: >
-#      /bin/sh -c "
-#      /usr/bin/mc config host add myminio http://minio:9000 minio 12341234;
-#      /usr/bin/mc rm -r --force myminio/user-files;
-#      /usr/bin/mc mb myminio/user-files;
-#      /usr/bin/mc policy download myminio/user-files;
-#      exit 0;
-#      "
-  mysql:
-    image: 'mysql:8.2'
+  #  createbuckets:
+  #    image: minio/mc
+  #    depends_on:
+  #      - minio
+  #    entrypoint: >
+  #      /bin/sh -c "
+  #      /usr/bin/mc config host add myminio http://minio:9000 minio 12341234;
+  #      /usr/bin/mc rm -r --force myminio/user-files;
+  #      /usr/bin/mc mb myminio/user-files;
+  #      /usr/bin/mc policy download myminio/user-files;
+  #      exit 0;
+  #      "
+
+  postgres:
+    image: postgres
     restart: always
     environment:
-      MYSQL_DATABASE: file_storage
-      MYSQL_USER: mysql
-      MYSQL_PASSWORD: 1234
-      MYSQL_ROOT_PASSWORD: 1234
+      POSTGRES_DB: file_storage
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 1234
     ports:
-      - '3306:3306'
+      - '5432:5432'
     volumes:
-      - db:/var/lib/mysql
+#      - ./src/main/resources/db-init/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - pg_data:/var/lib/postgresql/data
+
+#  mysql:
+#    image: 'mysql:8.2'
+#    restart: always
+#    environment:
+#      MYSQL_DATABASE: file_storage
+#      MYSQL_USER: mysql
+#      MYSQL_PASSWORD: 1234
+#      MYSQL_ROOT_PASSWORD: 1234
+#    ports:
+#      - '3306:3306'
+#    volumes:
+#      - db:/var/lib/mysql
 
 volumes:
-  db:
+  pg_data:
   minio_data:
