--- a/pom.xml
+++ b/pom.xml
@@ -39,10 +39,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
-            <version>8.2.0</version>
-            <scope>runtime</scope>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -67,7 +66,8 @@
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
-            <artifactId>mysql</artifactId>
+            <artifactId>postgresql</artifactId>
+            <version>1.19.6</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -85,5 +85,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
