--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,9 @@ spring.servlet.multipart.max-file-size=5MB
 
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/file_storage?useSSL=false&allowPublicKeyRetrieval=true&autoReconnect=true&loggerLevel=off
-spring.datasource.username=mysql
+spring.datasource.url=jdbc:postgresql://localhost:5432/file_storage
+spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.show-sql=true
 #server.error.whitelabel.enabled=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
